--- a/nodejs/src/views/login.hbs
+++ b/nodejs/src/views/login.hbs
@@ -70,7 +70,11 @@
         <p class="d-flex justify-content-center fw-bold  mx-auto my-auto">{{messages.failed}}</p>
     </div>
     {{/if}}
-
+     {{#if messages.success}}
+    <div class="alert alert-success" role="alert">
+        <p class="d-flex justify-content-center fw-bold  mx-auto my-auto">{{messages.success}}</p>
+    </div>
+    {{/if}}
 
     <!-- LOGIN -->
     <h4 class="d-flex justify-content-center mt-5 mb-5 fw-bold">LOGIN TO YOUR ACCOUNT</h4>
