--- a/nodejs/src/views/register.hbs
+++ b/nodejs/src/views/register.hbs
@@ -71,15 +71,15 @@
     <form id="contactContainer" class="mx-auto mt-4" action="/register" method="POST">
         <div>
             <label for="nama" class="form-label">Nama</label>
-            <input type="text" class="form-control" id="nama" name="nama">
+            <input type="text" class="form-control" id="nama" name="nama" required>
         </div>
         <div class="mt-3">
-            <label for="email" class="form-label">Email</label>
+            <label for="email" class="form-label">Email</label required>
             <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email">
         </div>
         <div class="mt-3">
             <label for="tel" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" name="password">
+            <input type="password" class="form-control" id="password" name="password" required>
         </div>
 
         <div class="d-flex justify-content-end mt-5">
